<resources>
    <string name="app_name">BetterTogether</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="have_account">Already have an account? Sign in.</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_profile_activitu">ProfileActivitu</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="points">Points</string>
    <string name="sign">Sign In / Sign Up</string>
    <string name="title_activity_cardio">CardioActivity</string>
    <string name="title_activity_gym">GymActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for bottom navigationbar -->
    <string name="me">Profile</string>
    <string name="workout">Log Workout</string>
    <string name="favorites">Favorites</string>
    <string name="leaderboard">Friends</string>
    <string name="stats">Stats</string>
    <string name="charts">Charts</string>


    <!-- Strings for training -->
    <string name="gym">Log Gym Exercise</string>
    <string name="cardio">Log Cardio Exercise</string>
    <string name="daily">Log Daily Exercise</string>
    <string name="stairs">Stairs</string>
    <string name="busstop">Bus Stops</string>
    <string name="stand">Stand up</string>
    <string name="addStairsText">How many stairs do you want to add?</string>
    <string name="save">Save</string>

    <!-- String array for spinner when adding daily favorites -->
    <string-array name="amount_of_stairs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- String array for spinner when adding daily favorites time standing up -->
    <string-array name="amount_of_time_standing">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>


    <!-- String array for spinner when adding daily favorites -->
    <string-array name="type_of_daily">
        <item>Bus Stops</item>
        <item>Stairs</item>
        <item>Standing up</item>
    </string-array>


    <!-- String to GYM -->
    <string name="start_pause_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="paus_timer">Paus</string>
    <string name="add_ex">Add exercise</string>
    <string name="add_wrkout">Add Workout</string>
    <string name="busStopText">How many bus stops do you want to add?</string>
    <string name="standFavoriteText">How many minutes did you stand?</string>

    <string name="ex_name">Exercise name</string>
    <string name="name_of_exercise">Name of Exercise</string>

    <string name="exercise">Exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="add_row">Add Row</string>
    <string name="description_opt">Description (optional)</string>
    <string name="done">Done</string>
    <string name="add_friend">Add Friend</string>
    <string name="account_Setting">Account Settings</string>
    <string name="activityToAdd">Choose which acitivty you want to add</string>
    <string name="addGymFavorite">Gym</string>

    <!-- How Challenging -->
    <string name="easy">Easy</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="how_challenging_was_it">How challenging was it?</string>

    <!-- Exercise names -->
    <string-array name="exercises">
        <item>Pull Ups</item>
        <item>Biceps Curl</item>
    </string-array>

    <!-- Timer -->
    <string name="_00_00_00">00:00:00</string>


    <!-- Other -->
    <string name="title_activity_another_user">AnotherUserActivity</string>
    <string name="group_invite">Send Group Invite</string>
    <string name="change_name">Change Name</string>
    <string name="display_name">Display Name</string>
    <string name="add_new_favorite">Add New Favorite</string>
    <string name="empty_favorites_string">You have no favorites yet, add favorites by pressing the menu in the right upper corner</string>
    <string name="explain_favorites">Click on your favorite, when activity is done, to earn points</string>
    <string name="which_daily_log">Which type of activity do you want to log?</string>
    <string name="how_much_did_you_do">How much did you do?</string>

    <string name="send_request">Send Friend Request</string>
    <string name="decline">Decline Friend Request</string>
    <string name="add_new">Add New Friend</string>
    <string name="friend_email">Enter your friends email</string>
    <string name="add_remove">Add/Remove Friends</string>
    <string name="find">Find Your Friend</string>
    <string name="settings">Settings</string>
    <string name="how_many_stairs">How many flight of stairs did you walk?</string>
    <string name="how_many_minutes">How many minutes did you stand up?</string>
    <string name="how_many_bus_stops">Between how many bus stops did you walk?</string>
    <string name="add_favorite_text">Add Favorite Workouts</string>
    <string name="tool_workout">Workout</string>
    <string name="tool_me">Me</string>
    <string name="tool_favorites">Favorites</string>
    <string name="tool_leaderboard">Friends</string>
    <string name="tool_daily">Daily</string>
    <string name="tool_bus">Bus Stops</string>
    <string name="tool_stairs">Stairs</string>
    <string name="search">Search</string>
</resources>
