<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/ex_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_exercise"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/header_row_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sets"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reps"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/lst_rows"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:descendantFocusability="beforeDescendants"/>

    <Button
        android:id="@+id/btn_add_row"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_row" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_opt"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_add_ex_done"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent2"
        android:text="@string/done" />


</LinearLayout>
