<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kandidat.trainingapp.Fragments.TrainingFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/gymButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="100dp"
            android:text="@string/gym"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@color/colorButtonCharts"/>


        <Button
            android:id="@+id/cardioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/cardio"
            android:background="@color/colorButtonCharts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <Button
            android:id="@+id/dailyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/daily"
            android:background="@color/colorButtonCharts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>
</FrameLayout>
