<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kandidat.trainingapp.Activities.CardioActivity">

    <include layout="@layout/layout_activity_toolbar" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="102dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_weight="1"
        android:text="00:00:00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_timer_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/stop_timer"
        app:layout_constraintBottom_toBottomOf="@+id/btn_timer_paus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_timer_paus"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_timer_paus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/paus_timer"
        app:layout_constraintBottom_toBottomOf="@+id/btn_timer_start"
        app:layout_constraintEnd_toStartOf="@+id/btn_timer_stop"
        app:layout_constraintStart_toEndOf="@+id/btn_timer_start"
        app:layout_constraintTop_toTopOf="@+id/btn_timer_start"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_timer_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:text="@string/start_pause_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />


</android.support.constraint.ConstraintLayout>
